# infrawatch

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  run_collectors.py  run_mvp.py  tasks.py  test_spiders.py
backend/app/: config.py  main.py
backend/app/api/v1/: collected_data.py  config.py  data.py  financials.py  price_indices.py  (+5 more)
backend/app/core/: config_loader.py  database.py
backend/app/domain/: signal_detector.py  stage_engine.py
backend/app/models/: __init__.py  database.py  price.py  signal.py
backend/app/repositories/: __init__.py  metric_repository.py  price_history.py
backend/app/schemas/: common.py  price.py  signal.py
backend/app/services/: collection_service.py  metrics_calculator.py
backend/collectors/: __init__.py  capex_collector.py  gpu_price_collector.py  inference_coverage_collector.py
backend/config/: cloud_revenue.yml  gpu_efficiency.yml  inference_coverage.yml
backend/data/: infrawatch.db
backend/data/capex/: capex_2026-01-30.json
backend/data/gpu_prices/: prices_2026-01-30.json
backend/data/inference_coverage/: coverage_2026-01-30.json
backend/migrations/: 001_initial.sql  run_migration.py
backend/plugins/: __init__.py  base.py  registry.py
backend/plugins/sectors/: __init__.py  sector_b.py
backend/scripts/: seed_data.py
backend/spiders/: __init__.py  anthropic_spider.py  aws_spider.py  azure_spider.py  base.py  deepseek_spider.py  gcp_spider.py  lambda_labs_spider.py  minimax_spider.py  openai_spider.py  qwen_spider.py  trendforce_spider.py
(+58 files in other folders)
